# BotR

./: Cargo.toml  README.md
src/: config.rs  groq.rs  main.rs
