[package]
name = "groq_tui_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

ratatui = "0.26"
crossterm = "0.27"
dotenvy = "0.15"

